tests/snapshots/help/sources__get.snap
---
source: tests/cli/snapshots.rs
---
Get source details

Usage: vendo sources get [OPTIONS] <sourceId>

Arguments:
  <sourceId>  

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo sources get <sourceId>
  $ vendo sources get <sourceId> --json
