tests/snapshots/help/sources__pause.snap
---
source: tests/cli/snapshots.rs
---
Pause a data source

Usage: vendo sources pause [OPTIONS] <sourceId>

Arguments:
  <sourceId>  

Options:
      --json            Output raw JSON
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo sources pause <sourceId>
  $ vendo sources pause <sourceId> --dry-run
